crates-next/otter-runtime/tests/compile_fail/worker_message_local_rejected.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/worker_message_local_rejected.rs:5:28
  |
5 |     worker.accepts_message(&local);
  |            --------------- ^^^^^^ expected `&StructuredCloneValue`, found `&Local<'_, ()>`
  |            |
  |            arguments to this method are incorrect
  |
  = note: expected reference `&StructuredCloneValue`
             found reference `&Local<'gc, ()>`
note: method defined here
 --> src/worker.rs
  |
  |     pub fn accepts_message(&self, _message: &StructuredCloneValue) -> bool {
  |            ^^^^^^^^^^^^^^^
